--- a/spider-p2/index.html
+++ b/spider-p2/index.html
@@ -10,15 +10,24 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
     <style type="text/css">
-        body {
-            margin: 0;
-        }
+		body {
+			background-color: #000;
+		}
+		canvas {
+			position: absolute;
+			/*left: 50%;
+			top: 50%;*/
+			/*margin-left: -400px;
+			margin-top: -300px;*/
+			/*width: 800px;
+			height: 600px;*/
+		}
     </style>
     <script type="text/javascript">
 		(function() {
 
 				//Create a new game that fills the screen
-				game = new Phaser.Game(window.innerWidth * window.devicePixelRatio, window.innerHeight * window.devicePixelRatio, Phaser.AUTO);
+				game = new Phaser.Game(800, 600, Phaser.AUTO);
 				
 				//Add all states
 				game.state.add("Boot", Boot);
