--- a/spider-p2/index.html
+++ b/spider-p2/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/preload.js"></script>
 	<script type="text/javascript" src="js/gametitle.js"></script>
 	<script type="text/javascript" src="js/level1.js"></script>
+	<script type="text/javascript" src="js/level2.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
     <style type="text/css">
