--- a/spider-p2/index.html
+++ b/spider-p2/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="js/level1.js"></script>
 	<script type="text/javascript" src="js/level2.js"></script>
 	<script type="text/javascript" src="js/level3.js"></script>
+	<script type="text/javascript" src="js/level4.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
 	<script type="text/javascript" src="js/gamewon.js"></script>
