--- a/spider-p2/index.html
+++ b/spider-p2/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>SpiderClimb</title>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
+	<script type="text/javascript" src="js/globals.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/preload.js"></script>
 	<script type="text/javascript" src="js/gametitle.js"></script>
@@ -11,6 +12,7 @@
 	<script type="text/javascript" src="js/level2.js"></script>
 	<script type="text/javascript" src="js/level3.js"></script>
 	<script type="text/javascript" src="js/level4.js"></script>
+	<script type="text/javascript" src="js/level5.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
 	<script type="text/javascript" src="js/gamewon.js"></script>
