--- a/spider-p2/index.html
+++ b/spider-p2/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/preload.js"></script>
 	<script type="text/javascript" src="js/gametitle.js"></script>
+	<script type="text/javascript" src="js/startgame.js"></script>
 	<script type="text/javascript" src="js/level1.js"></script>
 	<script type="text/javascript" src="js/level2.js"></script>
 	<script type="text/javascript" src="js/level3.js"></script>
@@ -40,6 +41,7 @@
 				game.state.add("Boot", Boot);
 				game.state.add("Preload", Preload);
 				game.state.add("GameTitle", GameTitle);
+				game.state.add("StartGame", StartGame);
 				game.state.add("Main", Main);
 				game.state.add("GameOver", GameOver);
 				game.state.add("GameWon", GameWon);
