--- a/spider-p2/index.html
+++ b/spider-p2/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="js/level4.js"></script>
 	<script type="text/javascript" src="js/level5.js"></script>
 	<script type="text/javascript" src="js/level6.js"></script>
+	<script type="text/javascript" src="js/level7.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/gameover.js"></script>
 	<script type="text/javascript" src="js/gamewon.js"></script>
